# Django-ToDo-Application-REST-API

./: .gitignore  .pylama.ini  README.md  db.sqlite3  pyproject.toml
frontend/chat-app/: .babelrc  index.js  package-lock.json  package.json  sil.html
frontend/chat-app/.parcel-cache/: 265812a3d73a17b5  5ce9eacc6a22bb83  5d102dff0a3f4e7e  b9964151050d55a0  lock.mdb
frontend/chat-app/src/: App.js  actions.js  index.html  index.js
frontend/chat-app/src/components/ChatBox/: ChatBox.css  ChatBox.jsx  index.js
todo/: asgi.py  celery.py  settings.py  urls.py
todo/apps/chat/: apps.py  consumers.py  routing.py  urls.py  views.py
todo/apps/chat/templates/chat/: room.html  single.html
todo/apps/comments/: apps.py  models.py
todo/apps/comments/migrations/: 0001_initial.py
todo/apps/tasks/: admin.py  apps.py  filters.py  models.py  permissions.py  relations.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
todo/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0003_alter_task_assigned_to_alter_task_created_by.py  0004_alter_task_name.py
todo/apps/users/: apps.py  filters.py  models.py  serializers.py  urls.py  validators.py  viewsets.py
todo/apps/users/migrations/: 0001_initial.py
todo/apps/users/tests/: __init__.py  user_deletion.py
todo/core/: apps.py  views.py
